--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Players</title>
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d60696bc6d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+
+    <header>
+        <div class="container">
+            <!-- link dentro da imagem / title: acessibilidade -->
+            <a href="index.html" title="Acessar a página inicial do site">
+                <img src="img/Logo.svg" alt="Logo do site E-Players">
+            </a>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html" title="acessar página inicial">início</a></li>
+                        <!-- linkar dentro da página: #namepage -->
+                    <li><a href="#sobre" title="acessar sessão sobre o projeto">sobre</a></li>
+                    <li><a href="#notícias" title="acessar sessão sobre o projeto">notícias</a></li>
+                    <li><a href="cadastro.html" title="acessar página de cadastro">cadastre-se</a></li>
+                    <li><a href="login.html" title="acessar página de login">login</a></li>
+                    <li>
+                        <a href="#" title="Realizar busca no site">
+                            <i class="fas fa-search"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
