--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <!-- link dentro da imagem / title: acessibilidade -->
             <a href="index.html" title="Acessar a página inicial do site">
-                <img src="img/Logo.svg" alt="Logo do site E-Players">
+                <img src="img/Imagens/Logo.svg" alt="Logo do site E-Players">
             </a>
             <nav>
                 <ul>
@@ -37,6 +37,67 @@
         </div>
     </header>
     <main>
+        <section class="partidas">
+            <div class="container">
+                <div class="partida">
+                    <h2>Partidas em Andamento</h2>
+                    <div>
+                        <strong>FLA</strong>
+                        <img src="img/Imagens/FLA.png" alt="Escudo do Clube de Regastas Flamengo">
+                        <i>VS</i>
+                        <img src="img/Imagens/SK.png" alt="Emblema da SK">
+                        <strong>SK</strong>
+                    </div>
+                    <i class="fas fa-circle red"></i> AO VIVO
+                </div>
+                
+                <div class="partida">
+                    <h2>Próximas Partidas</h2>
+                    <div>
+                        <strong>FLA</strong>
+                        <img src="img/Imagens/FLA.png" alt="Escudo do Clube de Regastas Flamengo">
+                        <i>VS</i>
+                        <img src="img/Imagens/SK.png" alt="Emblema da SK">
+                        <strong>SK</strong>
+                    </div>
+                    12h30
+                </div>
+
+                <div class="partida">
+                    <div>
+                        <strong>FLA</strong>
+                        <img src="img/Imagens/FLA.png" alt="Escudo do Clube de Regastas Flamengo">
+                        <i>VS</i>
+                        <img src="img/Imagens/SK.png" alt="Emblema da SK">
+                        <strong>SK</strong>
+                    </div>
+                    12h30
+                </div>
+
+                <div class="partida">
+                    <div>
+                        <strong>FLA</strong>
+                        <img src="img/Imagens/FLA.png" alt="Escudo do Clube de Regastas Flamengo">
+                        <i>VS</i>
+                        <img src="img/Imagens/SK.png" alt="Emblema da SK">
+                        <strong>SK</strong>
+                    </div>
+                    12h30
+                </div>
+
+                <div class="partida">
+                    <div>
+                        <strong>FLA</strong>
+                        <img src="img/Imagens/FLA.png" alt="Escudo do Clube de Regastas Flamengo">
+                        <i>VS</i>
+                        <img src="img/Imagens/SK.png" alt="Emblema da SK">
+                        <strong>SK</strong>
+                    </div>
+                    12h30
+                </div>
+
+            </div>
+        </section>
 
     </main>
     <footer>
