--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
             </div>
         </section>
 
+        <div class="container">
+            <div class="banner">
+                <img src="img/Imagens/play.png" alt="rodar vídeo descritivo">
+            </div>
+        </div>
+
     </main>
     <footer>
 
