Sessao sobre finalizada

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <strong>SK</strong>
                     </div>
                     <i class="fas fa-circle red"></i> AO VIVO
-                </div>
+                </div><!--fim partida-->
                 
                 <div class="partida">
                     <h2>Próximas Partidas</h2>
@@ -61,7 +61,7 @@
                         <strong>SK</strong>
                     </div>
                     12h30
-                </div>
+                </div><!--fim partida-->
 
                 <div class="partida">
                     <div>
@@ -72,7 +72,7 @@
                         <strong>SK</strong>
                     </div>
                     12h30
-                </div>
+                </div><!--fim partida-->
 
                 <div class="partida">
                     <div>
@@ -83,7 +83,7 @@
                         <strong>SK</strong>
                     </div>
                     12h30
-                </div>
+                </div><!--fim partida-->
 
                 <div class="partida">
                     <div>
@@ -94,10 +94,10 @@
                         <strong>SK</strong>
                     </div>
                     12h30
-                </div>
+                </div><!--fim partida-->
 
-            </div>
-        </section>
+            </div><!--fim container-->
+        </section><!--fim section partidas-->
 
         <div class="container">
             <div class="banner">
@@ -117,18 +117,23 @@
                 <img src="img/Imagens/SuperLigaABCDE.png" alt="Liga 2">
                 <img src="img/Imagens/wgr_lplol-logo-2020-71fc5702eb0473cb8d1da98fc28d054bebbfa505d4d80b457b11754d8a737255.png" alt="Liga 5">
 
+            </div><!--fim ligas-->
+        </div><!--fim container-->
 
 
-
-            </div>
-
-
-        </div>
-
-
-        <div class="sobre">
-            
-        </div>
+        <section class="sobre">
+            <img src="img/Imagens/campeao.png" alt="Riven campeã de LoL segurando uma espada">
+            <div class="sobre_fundo">
+                <div class="sobre_fundo_filtro">
+                <div class="texto_sobre">
+                    <h2>Como funciona a E-Players?</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur incidunt delectus nulla. Odio ipsa possimus harum deleniti? Neque eius, in assumenda, quasi, non labore mollitia nesciunt harum recusandae nihil id.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias labore asperiores ea iusto at obcaecati, ipsam neque facilis quod harum. Officia necessitatibus hic voluptate obcaecati sapiente esse earum excepturi nam!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias labore asperiores ea iusto at obcaecati, ipsam neque facilis quod harum. Officia necessitatibus hic voluptate obcaecati sapiente esse earum excepturi nam!</p>
+                </div> <!-- fim texto_sobre -->
+            </div><!--fim sobre_fundo_filtro-->
+            </div><!--fim sobre_fundo-->
+        </section>  <!--fim section sobre-->
 
     </main>
     <footer>
