--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li>
                         <a href="index.html" title="acessar página inicial">início</a></li>
-                        <!-- linkar dentro da página: #namepage -->
+                    <!-- linkar dentro da página: #namepage -->
                     <li><a href="#sobre" title="acessar sessão sobre o projeto">sobre</a></li>
                     <li><a href="#notícias" title="acessar sessão sobre o projeto">notícias</a></li>
                     <li><a href="cadastro.html" title="acessar página de cadastro">cadastre-se</a></li>
@@ -49,8 +49,9 @@
                         <strong>SK</strong>
                     </div>
                     <i class="fas fa-circle red"></i> AO VIVO
-                </div><!--fim partida-->
-                
+                </div>
+                <!--fim partida-->
+
                 <div class="partida">
                     <h2>Próximas Partidas</h2>
                     <div>
@@ -61,7 +62,8 @@
                         <strong>SK</strong>
                     </div>
                     12h30
-                </div><!--fim partida-->
+                </div>
+                <!--fim partida-->
 
                 <div class="partida">
                     <div>
@@ -72,7 +74,8 @@
                         <strong>SK</strong>
                     </div>
                     12h30
-                </div><!--fim partida-->
+                </div>
+                <!--fim partida-->
 
                 <div class="partida">
                     <div>
@@ -83,7 +86,8 @@
                         <strong>SK</strong>
                     </div>
                     12h30
-                </div><!--fim partida-->
+                </div>
+                <!--fim partida-->
 
                 <div class="partida">
                     <div>
@@ -94,10 +98,13 @@
                         <strong>SK</strong>
                     </div>
                     12h30
-                </div><!--fim partida-->
+                </div>
+                <!--fim partida-->
 
-            </div><!--fim container-->
-        </section><!--fim section partidas-->
+            </div>
+            <!--fim container-->
+        </section>
+        <!--fim section partidas-->
 
         <div class="container">
             <div class="banner">
@@ -115,25 +122,144 @@
                 <img src="img/Imagens/Liga_Master_Fibertel.png" alt="Liga 3">
                 <img src="img/Imagens/worlds-logo-gold.png" alt="Liga 4">
                 <img src="img/Imagens/SuperLigaABCDE.png" alt="Liga 2">
-                <img src="img/Imagens/wgr_lplol-logo-2020-71fc5702eb0473cb8d1da98fc28d054bebbfa505d4d80b457b11754d8a737255.png" alt="Liga 5">
+                <img src="img/Imagens/wgr_lplol-logo-2020-71fc5702eb0473cb8d1da98fc28d054bebbfa505d4d80b457b11754d8a737255.png"
+                    alt="Liga 5">
 
-            </div><!--fim ligas-->
-        </div><!--fim container-->
+            </div>
+            <!--fim ligas-->
+        </div>
+        <!--fim container-->
 
 
         <section class="sobre">
             <img src="img/Imagens/campeao.png" alt="Riven campeã de LoL segurando uma espada">
             <div class="sobre_fundo">
                 <div class="sobre_fundo_filtro">
-                <div class="texto_sobre">
-                    <h2>Como funciona a E-Players?</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur incidunt delectus nulla. Odio ipsa possimus harum deleniti? Neque eius, in assumenda, quasi, non labore mollitia nesciunt harum recusandae nihil id.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias labore asperiores ea iusto at obcaecati, ipsam neque facilis quod harum. Officia necessitatibus hic voluptate obcaecati sapiente esse earum excepturi nam!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias labore asperiores ea iusto at obcaecati, ipsam neque facilis quod harum. Officia necessitatibus hic voluptate obcaecati sapiente esse earum excepturi nam!</p>
-                </div> <!-- fim texto_sobre -->
-            </div><!--fim sobre_fundo_filtro-->
-            </div><!--fim sobre_fundo-->
-        </section>  <!--fim section sobre-->
+                    <div class="texto_sobre">
+                        <h2>Como funciona a E-Players?</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur incidunt delectus nulla.
+                            Odio ipsa possimus harum deleniti? Neque eius, in assumenda, quasi, non labore mollitia
+                            nesciunt harum recusandae nihil id.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias labore asperiores ea iusto
+                            at obcaecati, ipsam neque facilis quod harum. Officia necessitatibus hic voluptate obcaecati
+                            sapiente esse earum excepturi nam!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias labore asperiores ea iusto
+                            at obcaecati, ipsam neque facilis quod harum. Officia necessitatibus hic voluptate obcaecati
+                            sapiente esse earum excepturi nam!</p>
+                    </div> <!-- fim texto_sobre -->
+                </div>
+                <!--fim sobre_fundo_filtro-->
+            </div>
+            <!--fim sobre_fundo-->
+        </section>
+        <!--fim section sobre-->
+
+        <div class="container content">
+            <section>
+                <h3>notícias</h3>
+
+                <div class="card">
+                    <img src="img/Imagens/Teams/T1.jpeg" alt="Imagem representando a equipe 1">
+                    <div>
+                        <h4>Titulo da notícia em questão</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta culpa odit eligendi. Enim non reiciendis eveniet minima quis. Natus explicabo veritatis praesentium accusamus distinctio iure culpa autem aut dolorem quasi.</p>
+                    </div><!--fim div-->
+                </div><!--fim card-->
+                <div class="card">
+                    <img src="img/Imagens/Teams/T2.jpg" alt="Imagem representando a equipe 1">
+                    <div>
+                        <h4>Titulo da notícia em questão</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta culpa odit eligendi. Enim non reiciendis eveniet minima quis. Natus explicabo veritatis praesentium accusamus distinctio iure culpa autem aut dolorem quasi.</p>
+                    </div><!--fim div-->
+                </div><!--fim card-->
+                <div class="card">
+                    <img src="img/Imagens/Teams/T3.jpeg" alt="Imagem representando a equipe 1">
+                    <div>
+                        <h4>Titulo da notícia em questão</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta culpa odit eligendi. Enim non reiciendis eveniet minima quis. Natus explicabo veritatis praesentium accusamus distinctio iure culpa autem aut dolorem quasi.</p>
+                    </div><!--fim div-->
+                </div><!--fim card-->
+            </section><!---->
+
+
+            <article>
+                <h3>resultados</h3>
+                <div class="resultados_box">
+
+                    <div class="resultado">
+                        <div>
+                            <strong>FLA</strong>
+                            <img src="img/Imagens/FLA.png" alt="Escudo do Clube de Regastas Flamengo">
+                            <i>VS</i>
+                            <img src="img/Imagens/SK.png" alt="Emblema da SK">
+                            <strong>SK</strong>
+                        </div>
+                        <p> 3 X 2</p>
+                    </div><!--fim do placar-->
+                    <div class="resultado">
+                        <div>
+                            <strong>FLA</strong>
+                            <img src="img/Imagens/FLA.png" alt="Escudo do Clube de Regastas Flamengo">
+                            <i>VS</i>
+                            <img src="img/Imagens/SK.png" alt="Emblema da SK">
+                            <strong>SK</strong>
+                        </div>
+                        <p> 3 X 2</p>
+                    </div><!--fim do placar-->
+                    <div class="resultado">
+                        <div>
+                            <strong>FLA</strong>
+                            <img src="img/Imagens/FLA.png" alt="Escudo do Clube de Regastas Flamengo">
+                            <i>VS</i>
+                            <img src="img/Imagens/SK.png" alt="Emblema da SK">
+                            <strong>SK</strong>
+                        </div>
+                        <p> 3 X 2</p>
+                    </div><!--fim do placar-->
+                    <div class="resultado">
+                        <div>
+                            <strong>FLA</strong>
+                            <img src="img/Imagens/FLA.png" alt="Escudo do Clube de Regastas Flamengo">
+                            <i>VS</i>
+                            <img src="img/Imagens/SK.png" alt="Emblema da SK">
+                            <strong>SK</strong>
+                        </div>
+                        <p> 3 X 2</p>
+                    </div><!--fim do placar-->
+                    <div class="resultado">
+                        <div>
+                            <strong>FLA</strong>
+                            <img src="img/Imagens/FLA.png" alt="Escudo do Clube de Regastas Flamengo">
+                            <i>VS</i>
+                            <img src="img/Imagens/SK.png" alt="Emblema da SK">
+                            <strong>SK</strong>
+                        </div>
+                        <p> 3 X 2</p>
+                    </div><!--fim do placar-->
+                    <div class="resultado">
+                        <div>
+                            <strong>FLA</strong>
+                            <img src="img/Imagens/FLA.png" alt="Escudo do Clube de Regastas Flamengo">
+                            <i>VS</i>
+                            <img src="img/Imagens/SK.png" alt="Emblema da SK">
+                            <strong>SK</strong>
+                        </div>
+                        <p> 3 X 2</p>
+                    </div><!--fim do placar-->
+                    <div class="resultado">
+                        <div>
+                            <strong>FLA</strong>
+                            <img src="img/Imagens/FLA.png" alt="Escudo do Clube de Regastas Flamengo">
+                            <i>VS</i>
+                            <img src="img/Imagens/SK.png" alt="Emblema da SK">
+                            <strong>SK</strong>
+                        </div>
+                        <p> 3 X 2</p>
+                    </div><!--fim do placar-->
+
+                </div><!--final box resultados-->
+            </article>
+        </div>
 
     </main>
     <footer>
