--- a/index.html
+++ b/index.html
@@ -162,24 +162,37 @@
                     <img src="img/Imagens/Teams/T1.jpeg" alt="Imagem representando a equipe 1">
                     <div>
                         <h4>Titulo da notícia em questão</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta culpa odit eligendi. Enim non reiciendis eveniet minima quis. Natus explicabo veritatis praesentium accusamus distinctio iure culpa autem aut dolorem quasi.</p>
-                    </div><!--fim div-->
-                </div><!--fim card-->
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta culpa odit eligendi. Enim
+                            non reiciendis eveniet minima quis. Natus explicabo veritatis praesentium accusamus
+                            distinctio iure culpa autem aut dolorem quasi.</p>
+                    </div>
+                    <!--fim div-->
+                </div>
+                <!--fim card-->
                 <div class="card">
                     <img src="img/Imagens/Teams/T2.jpg" alt="Imagem representando a equipe 1">
                     <div>
                         <h4>Titulo da notícia em questão</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta culpa odit eligendi. Enim non reiciendis eveniet minima quis. Natus explicabo veritatis praesentium accusamus distinctio iure culpa autem aut dolorem quasi.</p>
-                    </div><!--fim div-->
-                </div><!--fim card-->
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta culpa odit eligendi. Enim
+                            non reiciendis eveniet minima quis. Natus explicabo veritatis praesentium accusamus
+                            distinctio iure culpa autem aut dolorem quasi.</p>
+                    </div>
+                    <!--fim div-->
+                </div>
+                <!--fim card-->
                 <div class="card">
                     <img src="img/Imagens/Teams/T3.jpeg" alt="Imagem representando a equipe 1">
                     <div>
                         <h4>Titulo da notícia em questão</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta culpa odit eligendi. Enim non reiciendis eveniet minima quis. Natus explicabo veritatis praesentium accusamus distinctio iure culpa autem aut dolorem quasi.</p>
-                    </div><!--fim div-->
-                </div><!--fim card-->
-            </section><!---->
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta culpa odit eligendi. Enim
+                            non reiciendis eveniet minima quis. Natus explicabo veritatis praesentium accusamus
+                            distinctio iure culpa autem aut dolorem quasi.</p>
+                    </div>
+                    <!--fim div-->
+                </div>
+                <!--fim card-->
+            </section>
+            <!---->
 
 
             <article>
@@ -195,7 +208,8 @@
                             <strong>SK</strong>
                         </div>
                         <p> 3 X 2</p>
-                    </div><!--fim do placar-->
+                    </div>
+                    <!--fim do placar-->
                     <div class="resultado">
                         <div>
                             <strong>FLA</strong>
@@ -205,7 +219,8 @@
                             <strong>SK</strong>
                         </div>
                         <p> 3 X 2</p>
-                    </div><!--fim do placar-->
+                    </div>
+                    <!--fim do placar-->
                     <div class="resultado">
                         <div>
                             <strong>FLA</strong>
@@ -215,7 +230,8 @@
                             <strong>SK</strong>
                         </div>
                         <p> 3 X 2</p>
-                    </div><!--fim do placar-->
+                    </div>
+                    <!--fim do placar-->
                     <div class="resultado">
                         <div>
                             <strong>FLA</strong>
@@ -225,7 +241,8 @@
                             <strong>SK</strong>
                         </div>
                         <p> 3 X 2</p>
-                    </div><!--fim do placar-->
+                    </div>
+                    <!--fim do placar-->
                     <div class="resultado">
                         <div>
                             <strong>FLA</strong>
@@ -235,7 +252,8 @@
                             <strong>SK</strong>
                         </div>
                         <p> 3 X 2</p>
-                    </div><!--fim do placar-->
+                    </div>
+                    <!--fim do placar-->
                     <div class="resultado">
                         <div>
                             <strong>FLA</strong>
@@ -245,7 +263,8 @@
                             <strong>SK</strong>
                         </div>
                         <p> 3 X 2</p>
-                    </div><!--fim do placar-->
+                    </div>
+                    <!--fim do placar-->
                     <div class="resultado">
                         <div>
                             <strong>FLA</strong>
@@ -255,14 +274,47 @@
                             <strong>SK</strong>
                         </div>
                         <p> 3 X 2</p>
-                    </div><!--fim do placar-->
+                    </div>
+                    <!--fim do placar-->
 
-                </div><!--final box resultados-->
+                </div>
+                <!--final box resultados-->
             </article>
         </div>
 
     </main>
+    <!--fim main-->
     <footer>
+
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cadastro.html">Cadastre-se</a></li>
+                    <li><a href="#">Campeonatos</a></li>
+                    <li><a href="#">Política de Privacidade</a></li>
+                    <li><a href="#">Fale Conosco</a></li>
+                </ul>
+            </nav>
+
+            <div>
+<img src="img/Imagens/Logo.svg" alt="Logo projeto e-players">
+<div class="sociais">
+    <i class="fab fa-facebook-square"></i>
+    <i class="fab fa-instagram-square"></i>
+    <i class="fab fa-twitter-square"></i>
+    <i class="fab fa-youtube-square"></i>
+</div>
+            </div>
+
+            <form action="" method="">
+                <label for="email">Entre para a lista VIP</label>
+                <input type="email" id="email" name="email_usuario">
+                <button type="submit">ENVIAR</button>
+
+            </form>
+        </div>
+        <!--fim container-->
 
     </footer>
 </body>
