--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
 
         <div class="container">
             <nav>
+                <h3>Páginas</h3>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="cadastro.html">Cadastre-se</a></li>
@@ -300,21 +301,24 @@
             <div>
 <img src="img/Imagens/Logo.svg" alt="Logo projeto e-players">
 <div class="sociais">
-    <i class="fab fa-facebook-square"></i>
-    <i class="fab fa-instagram-square"></i>
-    <i class="fab fa-twitter-square"></i>
-    <i class="fab fa-youtube-square"></i>
+    <i class="fab fa-facebook"></i>
+    <i class="fab fa-instagram"></i>
+    <i class="fab fa-twitter"></i>
+    <i class="fab fa-youtube"></i>
 </div>
             </div>
 
             <form action="" method="">
                 <label for="email">Entre para a lista VIP</label>
+                <div>
                 <input type="email" id="email" name="email_usuario">
-                <button type="submit">ENVIAR</button>
+                <button type="submit" class="gradient btn">ENVIAR</button>
+            </div>
 
             </form>
         </div>
         <!--fim container-->
+        <p>© COPYRIGHT - Todos os direitos resevardos - SENAI de Informática E-Sports</p>
 
     </footer>
 </body>
