responsividade 800px quase finalizada

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <main>
         <section class="partidas">
             <div class="container">
+                <div class="em_andamento">
                 <div class="partida">
                     <h2>Partidas em Andamento</h2>
                     <div>
@@ -51,7 +52,9 @@
                     <i class="fas fa-circle red"></i> AO VIVO
                 </div>
                 <!--fim partida-->
-
+            </div><!--fim em_andamento-->
+            
+            <div class="proximas_partidas">
                 <div class="partida">
                     <h2>Próximas Partidas</h2>
                     <div>
@@ -98,18 +101,17 @@
                         <strong>SK</strong>
                     </div>
                     12h30
-                </div>
-                <!--fim partida-->
+                </div><!--fim partida-->
 
-            </div>
-            <!--fim container-->
-        </section>
-        <!--fim section partidas-->
+            </div><!--fim proximas_partidas-->
+
+            </div><!--fim container-->
+        </section><!--fim section partidas-->
 
         <div class="container">
             <div class="banner">
                 <img src="img/Imagens/play.png" alt="rodar vídeo descritivo">
-            </div>
+            </div><!--fim banner-->
 
 
             <div class="ligas">
